--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,8 @@
 
 :root {
     --primary-color: #ffb577;
-    --background-color: #19161B;
-    --font-heading: Playfair Display, 'serif';
+    --background-color: #19161b;
+    --font-heading: Playfair Display, "serif";
 }
 
 html {
@@ -31,7 +31,7 @@ a {
 
 .btn {
     border: none;
-    background: #FFB577;
+    background: #ffb577;
     padding: 12px 24px;
 }
 
@@ -40,13 +40,13 @@ a {
     font-weight: 500;
     font-size: 1.6rem;
     line-height: 1.5;
-    color: #2E2D33;
+    color: #2e2d33;
 }
 
 .heading {
     font-family: var(--font-heading);
     font-style: normal;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .lv1 {
@@ -61,6 +61,12 @@ a {
     line-height: 1.21;
 }
 
+.lv3 {
+    font-weight: 700;
+    font-size: 3.3rem;
+    line-height: 1.5;
+}
+
 .lv4 {
     font-weight: 700;
     font-size: 2rem;
@@ -71,16 +77,17 @@ a {
     font-weight: 400;
     font-size: 1.6rem;
     line-height: 1.75;
-    color: #B8B8B8;
+    color: #b8b8b8;
 }
 
 .caption {
     position: relative;
+    display: inline-block;
     font-family: var(--font-heading);
     font-weight: 400;
     font-size: 1.6rem;
     line-height: 1.5;
-    color: #FFB577;
+    color: #ffb577;
 }
 
 .caption::after {
@@ -88,9 +95,9 @@ a {
     content: "";
     display: block;
     width: 48px;
-    border: 0.5px solid #FFFFFF;
+    border: 0.5px solid #ffffff;
     top: 50%;
-    left: 194px;
+    right: calc(-48px - 16px);
 }
 
 /* ================Header=================*/
@@ -119,7 +126,7 @@ a {
     font-weight: 500;
     font-size: 1.6rem;
     line-height: 1.5;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .header .action {
@@ -133,7 +140,7 @@ a {
 
 .header .action .label {
     margin-right: 12px;
-    color: #FFC492;
+    color: #ffc492;
 }
 
 /* ================Hero=================*/
@@ -146,11 +153,11 @@ a {
     width: 48%;
 }
 
-.hero-info>.desc {
+.hero-info > .desc {
     margin-top: 16px;
 }
 
-.hero-info .btn  {
+.hero-info .btn {
     margin-top: 32px;
 }
 
@@ -169,62 +176,124 @@ a {
 }
 
 /* ================Know-more=================*/
- .know-more {
+.know-more {
     padding-top: 160px;
     background-color: var(--background-color);
- }
+}
 
- .know-more .info {
+.know-more .info {
     width: 49%;
- }
+}
 
- .know-more .info .heading {
+.know-more .info .heading {
     margin-top: 24px;
- }
+}
 
- .know-more .info .desc {
+.know-more .info .desc {
     margin-top: 32px;
- }
+}
 
- .know-more .info .item-list {
+.know-more .info .item-list {
     display: flex;
     gap: 38px;
     margin-top: 40px;
- }
+}
 
- .know-more .info .item {
+.know-more .info .item {
     width: 29%;
- }
+}
 
- .know-more .info .item .value {
+.know-more .info .item .value {
     display: flex;
     gap: 7px;
- }
+}
 
- .know-more .info .item .value .number {
+.know-more .info .item .value .number {
     font-weight: 500;
     font-size: 2.4rem;
     line-height: 1.5;
-    color: #C4E4EA;
- }
+    color: #c4e4ea;
+}
 
- .know-more .info .btn {
+.know-more .info .btn {
     margin-top: 32px;
- }
+}
 
- .know-more .images {
+.know-more .images {
     display: flex;
     gap: 67px;
     margin-left: 102px;
- }
+}
 
- .know-more .images .img {
+.know-more .images .img {
     width: 240px;
     height: 500px;
     object-fit: cover;
- }
+}
 
- .know-more .images .img:first-child {
+.know-more .images .img:first-child {
     margin-top: 83px;
- }
+}
 
+/* ================Serving=================*/
+
+.serving {
+    background-color: var(--background-color);
+    padding-top: 160px;
+}
+
+.serving .body {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 24px;
+}
+
+.serving .details {
+    display: flex;
+    align-items: center;
+    gap: 58px;
+}
+
+.serving .details .heading {
+    display: block;
+    width: 52%;
+}
+
+.serving .details .desc {
+    display: block;
+    width: 48%;
+}
+
+.serving .table {
+    display: flex;
+    flex-wrap: wrap;
+    background: rgba(0, 0, 0, 0.16);
+    margin-top: 65px;
+}
+
+.serving .table .item {
+    width: 33.3%;
+    padding: 64px;
+}
+
+.serving .table .item:nth-child(2),
+.serving .table .item:nth-child(5) {
+    border-left: 0.5px solid rgba(255, 255, 255, 0.06);
+    border-right: 0.5px solid rgba(255, 255, 255, 0.06);
+}
+
+.serving .table .item .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background: rgba(255, 181, 119, 0.07);
+}
+
+.serving .table .item .heading {
+    margin-top: 24px;
+    margin-bottom: 12px;
+}
