--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,13 @@ a {
     color: #2e2d33;
 }
 
+.label-extransmall {
+    font-weight: 500;
+    font-size: 1.2rem;
+    line-height: 1.33;
+    color: #FFFFFF;
+}
+
 .heading {
     font-family: var(--font-heading);
     font-style: normal;
@@ -121,7 +128,7 @@ a {
     background-color: var(--background-color);
 }
 
-.body {
+.header .body {
     display: flex;
     align-items: center;
     padding: 28px 0px 8px;
@@ -160,6 +167,11 @@ a {
     background-color: var(--background-color);
 }
 
+.hero .body {
+    display: flex;
+    align-items: center;
+}
+
 .hero-info {
     width: 48%;
 }
@@ -190,6 +202,11 @@ a {
 .know-more {
     padding-top: 160px;
     background-color: var(--background-color);
+}
+
+.know-more .body {
+    display: flex;
+    align-items: center;
 }
 
 .know-more .info {
@@ -380,3 +397,66 @@ a {
     margin-left: auto;
     margin-right: auto;
 }
+
+/* ================Quote=================*/
+
+.quote {
+    background-color: #1F1D21;
+}
+
+.quote .body {
+    display: flex;
+    
+}
+
+.quote .details {
+    width: 40%;
+    padding: 80px 78px 84px 0px;
+}
+
+.quote .images {
+    width: 60%;
+}
+
+.quote .details .text {
+    margin-top: 43px;
+    font-family: var(--font-heading);
+    font-weight: 500;
+    font-size: 3.2rem;
+    line-height: 1.5;
+    color: #FFFFFF;
+    opacity: 0.87;
+}
+
+.quote .details .info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 68px;
+}
+
+.quote .details .info .label-med {
+    color: #FFFFFF;
+    opacity: 0.87;
+}
+.quote .details .info .label-extransmall {
+    margin-top: 4px;
+    color: #FFFFFF;
+    opacity: 0.6;
+}
+
+.quote .details .info .avt {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+}
+
+.quote .images img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+
+
