--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,7 +456,42 @@ a {
     object-fit: cover;
 }
 
+/* ================Blog=================*/
 
+.blog {
+    background-color: var(--background-color);
+    padding-top: 160px;
+}
 
+.blog .item-list {
+    display: flex;
+    gap: 30px;
+    margin-top: 64px;
+}
 
+.blog .item-list .item {
+    width: 32%;
+    background-color: #1F1D21;
+}
 
+.blog .item .container {
+    padding: 32px;
+}
+
+.blog .item .container .date {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.71;
+    color: #B8B8B8;
+}
+
+.blog .item .container .heading-item {
+    margin-top: 8px;
+    margin-bottom: 16px;
+}
+
+.blog .item .thumb {
+    width: 100%;
+    height: 234px;
+    object-fit: cover;
+}
